--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -32,7 +32,9 @@
  */
 
 html {
-  font-family: "PT Sans", Helvetica, Arial, sans-serif;
+  font-family: "EB Garamond", Helvetica, Arial, sans-serif;
+  text-align: justify;
+  text-justify: inter-word;
 }
 @media (min-width: 48em) {
   html {
@@ -43,6 +45,12 @@ html {
   html {
     font-size: 20px;
   }
+}
+
+code,
+pre {
+    font-family: Menlo, Monaco, monospace;
+    font-size: 0.8rem;
 }
 
 
@@ -79,7 +87,7 @@ html {
 .sidebar-about h1 {
   color: #fff;
   margin-top: 0;
-  font-family: "Abril Fatface", serif;
+  font-family: "EB Garamond", serif;
   font-size: 3.25rem;
 }
 
