--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -25,6 +25,7 @@
           {% endif %}
         {% endif %}
       {% endfor %}
+      <a class="sidebar-nav-item" href="//twitter.com/derfian">Twitter</a>
     </nav>
     <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
   </div>
