--- a/_includes/post.html
+++ b/_includes/post.html
@@ -6,7 +6,8 @@
     </h1>
 
     <div class="post-metadata">
-      <span class="post-metadata-date">{{ include.post.date | date_to_string }}</span>
+      <span class="post-metadata-date">{{ include.post.date | date_to_string }}</span> •
+      <a href="{{ include.post.url }}#disqus_thread">comments</a>
     </div>
     {% if include.excerpt %}
         {{ include.post.excerpt }}
