--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,8 @@ layout: default
 <div class="post">
   <h1 class="post-title">{{ page.title }}</h1>
   <div class="post-metadata">
-    <span class="post-metadata-date">{{ page.date | date_to_string }}</span>
+    <span class="post-metadata-date">{{ page.date | date_to_string }}</span> •
+    <a href="{{ include.post.url }}#disqus_thread">comments</a>
   </div>
   {{ content }}
 </div>
@@ -27,15 +28,5 @@ layout: default
 </div>
 
 <div id="disqus_thread"></div>
-<script type="text/javascript">
-    /* * * CONFIGURATION VARIABLES * * */
-    var disqus_shortname = 'derfiangithubio';
-
-    /* * * DON'T EDIT BELOW THIS LINE * * */
-    (function() {
-        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-        dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-    })();
-</script>
-<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
+{% include disqus-count-javascript.html %}
+{% include disqus-embed-javascript.html %}
